fixe text align

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body{
     background-color: #a00d02;
     width: 15%;
     margin-left: 10px;
+    text-align: start;
 }
 #total::before{
     content: 'Total: ';
